conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: '(' expected but identifier found.
if estFaceMur() {
   ^